# TIL

./: .gitignore  01_1.16_Github TIL.md  01_1.16_visual_code.md  01_Github TIL.md  02_01.20_git(push_pull).md  02_01.20_git(start).md  05_01.30_Algorithm_start.md  06_02.03_알고리즘_2차원 배열.md  07_02.05_git_branch.md  08_02.10_Recursive call.md  11_02.17_Error.md  12_02.17_OOP_advanced.md  13_02.22_BFS.md  15_03_07_Bitmask&Yield.md  16_Dynamic Programming.md  17_최단 경로 & 기타 그래프 이론.md  A형을 준비하는 사람을 위해.md  CS 강의 추천.md  Dacon 랭커특강.md  Drug Classifier.ipynb  myfunc.ipynb  readme.md  데분 순서.md  머신러닝 문제해결 체크리스트.md
.ipynb_checkpoints/: HW4_main-checkpoint.ipynb  HW4_util-checkpoint.ipynb
2020/: 00_1.15_python_basic.md  09_02.18_OOP_advanced(2).md  12_02.19_Stack.md  Untitled.ipynb  test.py
2022/: Twtich crawler.ipynb  cygnus_remaster.py  cygnus_remaster_response.xlsx  data_df_1.csv  html_parser.py  twitch_scraper.py  twitch_scrapper.ipynb
2024/: test.py
Algorithm/: 6주차.py  prac.py
Deep Learning/: Pytorch - Linear_Algebra_in_python.md  colab - Deep learning basics.ipynb  pytorch_tensor_transformation.md  tensor_transformation.md  딥러닝 기초 - 역전파.md
Git/: 05_git_branch.md
HW04/: HW4_main.py
LLM/: 1_Preprocessing(pptx).ipynb  1_data_input.ipynb  1_load_data.ipynb  2_Preprocessing.ipynb  2_RAG.ipynb  3_RAG.ipynb  4_Instagram_API.ipynb  4_Instagram_API_modified_JH.ipynb  LLM_4bit_quant.ipynb  Quiz_Chainrules.ipynb  RAG (Retrieval-Augmented Generation) - 검색, 증강, 생성.md  RAG_starter.ipynb  data.txt  extracted_text.txt  instagram_test.ipynb  langchain-bot-mt-v0.5.ipynb  pdf_reader.ipynb  preprocessed_OCR.txt  test.py  프롬프트 엔지니어링의 이해.md
Projects/AI 영어대화/: .gitignore  0.26.0  ASR.ipynb  ASR_re.ipynb  pyproject.toml  readme.md
Projects/llm_image_editor/: app.py  filters.py  inpaintings.py  pyproject.toml  tutorial.ipynb
(+343 files in other folders)
