[tool.poetry]
name = "ai 영어대화"
version = "0.1.0"
description = ""
authors = ["JHyuk2 <whdgurdl77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.47.1"
datasets = "^3.2.0"
accelerate = "^1.2.1"
torch = "^2.5.1"
ipykernel = "^6.29.5"
jupyterlab = "^4.3.4"
ipywidgets = "^8.1.5"
numpy = "<=2.0"
pydub = "^0.25.1"
python-dotenv = "^1.0.1"
bitsandbytes = "^0.45.0"
torchvision = "^0.20.1"
optimum = "^1.23.3"
ctransformers = "^0.2.27"
pyaudio = "^0.2.14"
soundfile = "^0.13.1"
sounddevice = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
